@@ -9,6 +9,7 @@ REDHAT_BUGZILLA=1040333
     - GIT_GLOB_TO_CMAKE_REGEX: Convert git glob to cmake regex
   + ManageArchive:
     - PACK_SOURCE_CPACK: Pack with CPack
+    - PACK_SOURCE_ARCHIVE: Now can specify OUTPUT_FILE.
     - Fixed Bug 1040333 - RFE: Support .gitignore file as 
       source of CPACK_SOURCE_IGNORE_FILES
   + ManageString:
